<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center_horizontal"
    android:padding="80dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnClimb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_climb"
        android:layout_margin="6dp"/>

    <Button
        android:id="@+id/btnFall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fall"
        android:layout_margin="6dp"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:layout_margin="6dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text1"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:contentDescription="@string/score_desc"
        android:text="0"
        android:textStyle="bold"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:layout_marginTop="12dp"/>

</LinearLayout>